BAP-17869: Fixes for disabled buttons, dropdown in filters, title on contact view page (#20570)
* BAP-17869: Fixes for disabled buttons, dropdown in filters, title on contact view page
- Fix styles for disabled buttons
- Fix dropdown alignment and horizontal scrollbar issue
- Fix offsets for title on contact view page
- Fix alignment
- Fix Grid Settings

--- a/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/datagrid-settings.scss
+++ b/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/datagrid-settings.scss
@@ -182,6 +182,11 @@
             overflow-x: hidden;
             margin: 0;
 
+            .thead-sizing {
+                display: table-header-group;
+                visibility: hidden;
+            }
+
             .table {
                 margin-top: -1px;
 
