--- a/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/variables/grid-views-variables.scss
+++ b/src/Oro/Bundle/DataGridBundle/Resources/public/css/scss/variables/grid-views-variables.scss
@@ -20,3 +20,5 @@ $oro-datagrid-inner-grid-views-offset: side-values(0 0 14px 16px) !default;
 $oro-datagrid-grid-views-mobile-title-width: 260px !default;
 
 $oro-datagrid-grid-views-mobile-small-title-width: 160px !default;
+
+$oro-datagrid-inner-grid-views-medium-offset: 0 0 14px !default;
